# Rina

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  rust.yml
agent-twitter-client/: Cargo.toml
agent-twitter-client/src/examples/: README.md
rig-twitter/src/examples/: README.md
rina/: Cargo.toml
rina-core/: Cargo.toml
rina-core/src/: agent.rs
rina-core/src/clients/: direct.rs  discord.rs  heuris.rs  mod.rs  telegram.rs  twitter.rs
rina-core/src/knowledge/: mod.rs  models.rs  store.rs  types.rs
rina-solana/src/gmgn/: client.rs  types.rs
rina/src/: main.rs
rina/src/characters/: rina.toml
