[workspace]
members = ["rina-core", "rina"]
resolver = "2"

[workspace.dependencies]
agent-twitter-client = "0.1.1"
rig-core = { path = "./rig-core", features = ["derive"] }
rig-sqlite = { path = "./rig-sqlite" }
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite", version = "0.6.0", features = [
    "bundled",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.4"
futures = "0.3"
